Added a copy to clipboard button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <input id="password" type="text" style="width: 80%" />
   </div>
   <br>
-  <button id="generate" onClick="generatePassword()">Generate</button>   
+  <button id="generate" onclick="generatePassword()">Generate</button>
+  <button id="copy" onclick="copyPassword()">Copy</button>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="script.js"></script>
