--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="author" content="Mlendea Horațiu">
         <meta name="keywords" content="Password,Generator">
 
+        <link rel="icon" href="https://iconarchive.com/download/i106193/papirus-team/papirus-apps/preferences-desktop-user-password.ico">
         <title>Password Generator</title>
 
         <!-- JQuery -->
