--- a/index.html
+++ b/index.html
@@ -34,16 +34,10 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Password Generator</a>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1">
-                            <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/hmlendea/password-generator">
-                                <i class="fab fa-fw fa-github"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+                <a class="navbar-brand js-scroll-trigger" href="https://github.com/hmlendea/password-generator">
+                    <i class="fab fa-fw fa-github"></i>
+                    Password Generator
+                </a>
             </div>
         </nav>
 
