--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     </head>
+    
     <body class="body">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
@@ -45,15 +46,18 @@
             <div class="divider-custom"></div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-2 ml-auto">
+                    <div class="col-lg-3 ml-auto">
                         <p><i class="fas fa-fw fa-ruler"></i> Length:</p>
                     </div>
-                    <div class="col-lg-2 mr-auto">
+                    <div class="col-lg-9 mr-auto">
                         <input class="form-control" id="length" type="number" placeholder="Length" value="48" />
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-12 ml-auto mr-auto">
+                    <div class="col-lg-3 ml-auto">
+                        <p><i class="fas fa-fw fa-key"></i> Password:</p>
+                    </div>
+                    <div class="col-lg-9 mr-auto">
                         <input class="form-control" id="password" type="text" placeholder="P@s$vv0rd!" />
                     </div>
                 </div>
