Added UI options to control the used characters

--- a/index.html
+++ b/index.html
@@ -63,6 +63,61 @@
                     </div>
                 </div>
                 <br>
+                <div class="row">
+                    <div class="col-lg-3 ml-auto"></div>
+                    <div class="col-lg-9 mr-auto">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" id="digitsCheckbox" name="digitsCheckbox" type="checkbox" checked="checked" />
+                            <label class="form-check-label" for="digitsCheckbox">Digits</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 ml-auto"></div>
+                    <div class="col-lg-9 mr-auto">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" id="lowercaseLettersCheckbox" name="lowercaseLettersCheckbox" type="checkbox" checked="checked" />
+                            <label class="form-check-label" for="lowercaseLettersCheckbox">Lowercase letters</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 ml-auto"></div>
+                    <div class="col-lg-9 mr-auto">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" id="uppercaseLettersCheckbox" name="uppercaseLettersCheckbox" type="checkbox" checked="checked" />
+                            <label class="form-check-label" for="uppercaseLettersCheckbox">Uppercase letters</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 ml-auto"></div>
+                    <div class="col-lg-9 mr-auto">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" id="symbolsCheckbox" name="symbolsCheckbox" type="checkbox" checked="checked" />
+                            <label class="form-check-label" for="symbolsCheckbox">Symbols</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 ml-auto"></div>
+                    <div class="col-lg-9 mr-auto">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" id="bracketsCheckbox" name="bracketsCheckbox" type="checkbox" />
+                            <label class="form-check-label" for="bracketsCheckbox">Brackets</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 ml-auto"></div>
+                    <div class="col-lg-9 mr-auto">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" id="othersCheckbox" name="othersCheckbox" type="checkbox" />
+                            <label class="form-check-label" for="othersCheckbox">Others</label>
+                        </div>
+                    </div>
+                </div>
+                <br>
                 <div class="row text-center">
                     <div class="col-lg-12 ml-auto mr-auto">
                         <span id="generate" class="btn btn-lg btn-outline-dark" onclick="generatePassword()">
