--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="col-lg-3 ml-auto"></div>
                     <div class="col-lg-9 mr-auto">
                         <div class="form-check form-switch">
-                            <input class="form-check-input" id="symbolsExtraCheckbox" name="symbolsExtraCheckbox" type="checkbox" checked="checked" />
+                            <input class="form-check-input" id="symbolsExtraCheckbox" name="symbolsExtraCheckbox" type="checkbox" />
                             <label class="form-check-label" for="symbolsExtraCheckbox">Symbols (Extra)</label>
                         </div>
                     </div>
